fixed gap between gallery-row items and next child

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -337,7 +337,6 @@
   justify-content: space-between;
   align-items: baseline;
   flex-direction: column;
-  
   min-height:300px;
   background-color: var(--whitesmoke);
   width:100%;
@@ -708,7 +707,6 @@
   }
   .projects-gallery {
     flex-direction: column;
-    gap:var(--page-gap);
   }
 .projects-gallery-row {
   width:100%;
